--- a/javascript/oop-principles/package.json
+++ b/javascript/oop-principles/package.json
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "tsc": "^2.0.4"
-  }
+  "license": "ISC"
 }
