--- a/javascript/oop-principles/package.json
+++ b/javascript/oop-principles/package.json
@@ -4,6 +4,7 @@
   "description": "SOLID principles   1. Single responsibility   2. Open-closed   3. Liskov substitution   4. Interface segregation   5. Dependency inversion Loosely coupled objects Separating core logic and DOM logic Coupling Patterns to Reduce Coupling Publish/Subscribe pattern",
   "main": "index.js",
   "scripts": {
+    "watch": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
